# AutoBloomer-HIB

./: .gitignore  CMakeLists.txt  README.md
hardware/CNC/C2D/: scd_cutouts_lid.c2d  scd_cutouts_sides.c2d
hardware/PCB/: HardwareInterfaceBoard.kicad_prl  HardwareInterfaceBoard.kicad_sch
hardware/sensor_board/: SensorBoard.kicad_pcb  SensorBoard.kicad_prl  SensorBoard.kicad_pro  SensorBoard.kicad_sch  fp-info-cache
pico/: CMakeLists.txt
pico/pico_src/: debug_io.h  hardware_definitions.h  sensor_definitions.c  sensor_definitions.h
pico/pico_src/hardware/: connected_hardware_monitor.c  connected_hardware_monitor.h  shift_register.c  shift_register.h
pico/pico_src/hardware/sensors/: battery_sensor.c  battery_sensor.h  scd30_sensor.c  scd30_sensor.h  sensor.c  sensor.h  sensor_i2c_interface.c  sensor_i2c_interface.h  sensor_pod.c  sensor_pod.h  sonar_sensor.c  sonar_sensor.h  stemma_soil_sensor.c
pico/pico_src/network/: mqtt_utils.c  mqtt_utils.h  network_utils.c  network_utils.h
pico/pico_src/sensor_multicore/: sensor_hardware_core_0.c  sensor_mqtt_client_core_1.c  sensor_multicore_utils.c  sensor_multicore_utils.h  sensor_uart_control_core_1.c  sensor_uart_control_core_1.h
pico/pico_src/uart_controller/: sensor_msgpack.h
pico/wifi_props/: broker  key  ssid
sensor_simulator/: cmd_buffer.c  cmd_buffer.h  fake_sensors.h  sensor_msgpack_data.c  sensor_msgpack_data.h  sensor_simulator.ino
src/: debug_io.h  hardware_definitions.h  pi_feeder_sensor_core.c  sensor_definitions.c  sensor_definitions.h  utils.h
src/hardware/: hardware_definitions.h  led_controller.c  led_controller.h  led_shifter.c  led_shifter.h  push_button.c  push_button.h  shift_register.c
src/hardware/sensors/: dht_sensor.c  dht_sensor.h  hx711.c  hx711.h  sensor.c  sensor.h  sensor_i2c_interface.c  sensor_i2c_interface.h  sensor_msgpack.c  sensor_msgpack.h  sensor_pod.c  sensor_pod.h  sonar_sensor.c  sonar_sensor.h  stemma_soil_sensor.c  stemma_soil_sensor.h
src/sensor_controller/: command_definitions.h  sensor_controller.c  sensor_controller.h
src/sensor_multicore/: sensor_controller_core.c  sensor_hardware_core_0.c  sensor_multicore_utils.c  sensor_multicore_utils.h  sensor_uart_control_core_1.c
src/uart_controller/: command_definitions.h  sensor_msgpack.c  sensor_msgpack.h  uart_sensor_controller.c  uart_sensor_controller.h
